--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "devdenky",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "8.10.0"
+  },
   "dependencies": {
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0"
   },
