--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
+  "homepage": "https://DenkyOgbonnaya.github.io/DevDenky",
   "name": "devdenky",
   "version": "0.1.0",
   "private": true,
   "engines": {
     "npm": "6.4.1",
     "node": "8.10.0"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
@@ -13,11 +22,8 @@
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "gh-pages":"2.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
